[tool.poetry]
name = "ml_american_basket"
version = "0.1.0"
description = ""
authors = ["Daniel Bischof <daniel.bischof@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
matplotlib = "^3.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
