[tool.poetry]
name = "american_option_pricing_neural_nets"
version = "0.3.0"
description = "A neural network pricer for american options"
authors = ["Daniel Bischof <daniel.bischof@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.0"
scipy = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
matplotlib = "^3.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
